# http-stub-server-rust

./: .gitignore  Cargo.toml  README.md  log4rs.yml  rustfmt.toml
src/: lib.rs  main.rs
src/core/: mod.rs  service.rs
src/http/: service.rs
tests/: integration_test.rs
